css/index.css
/* ... */
/*** UPDATE FRAME ***/

@media screen and (max-width: 760px){
	
	#header .efo_demo .wc-webchat {
		width: 201px;
		height: 352px;
	}
	#header .efo_demo .wc-webchat {
        display: block;		
		border: none;
		left: 50px;
		position: relative;
		top: 89px;
	}
}
@media screen and (max-width: 1024px){
	.section.bg3 .service_item.service_pc { 
		margin-left:10px;
	}
}

/*** END EPDATE ***/

/* Index お問い合わせ */
.section.bg7 .bg7_item {
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    padding: 0;
    margin: 0 20px;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    width: calc(100% - 40px);
}

.section.bg7 .bg7_item li {
    margin: 0;
    box-shadow: inset 0 0 0 5px #1791c9;
    border-top-left-radius: 25px;
    border-top-right-radius: 25px;
    padding: 5px;
}

.section.bg7 .bg7_item li + li {
    margin-left: 20px;
}
.section.bg7 .bg7_item li .title {
    background: #1791c9;
}

@media only screen and (max-width : 1200px) {
    .section.bg7 .bg7_item li {
        width: calc((100% - 60px) / 3);
    }
}

@media only screen and (max-width: 900px) and (min-width: 600px) {
    .section.bg7 .bg7_item li .contact_content {
        display: -webkit-flex;
        display: -ms-flexbox;
        display: flex;
        -webkit-box-orient: vertical;
        -webkit-box-direction: normal;
        -webkit-flex-direction: column;
        -ms-flex-direction: column;
        flex-direction: column;
        -webkit-box-pack: end;
        -ms-flex-pack: end;
        justify-content: flex-end;
    }
    .section.bg7 .bg7_item li .title, .section.bg7 .bg7_item li .content {
        height: auto;
    }
    .section.bg7 .bg7_item li .title {
        min-height: 74px;
    }
    .section.bg7 .bg7_item li .content {
        padding: 10px 0;
    }
    .section.bg7 .bg7_item li .title p {
        line-height: normal;
        padding: 5px;
    }
    .section.bg7 .bg7_item li .content p {
        line-height: normal;
    }
    .section.bg7 .bg7_item li + li {
        margin-left: calc(100vw * 20 / 750);
    }

    .section.bg7 .bg7_item li.item1 .content .phone {
        padding-top: 0;
        line-height: 1.3;
    }
}

@media only screen and (max-width : 600px) {
    .section.bg7 .bg7_item {
        -webkit-box-orient: vertical;
        -webkit-box-direction: normal;
        -webkit-flex-direction: column;
        -ms-flex-direction: column;
        flex-direction: column;
    }
    .section.bg7 .bg7_item li {
        width: 90%;
        margin: 30px auto 0;
    }
    .section.bg7 .bg7_item li + li {
        margin-left: auto;
    }
}
@media only screen and (min-width : 761px){
    .section.bg2 .bg2_item{
        display: flex;
        justify-content: center;
        -webkit-box-pack: center;
        -ms-flex-pack: center;
        padding-left: 0px;
    }
    .section.bg2 .bg2_item li{
        height: auto;
    }
    .section.bg2 .bg2_item_cotainer{
        padding-left:0;
    }
}

@media only screen and (max-width: 760px){
    .section.bg2 .bg2_item li {
        width: 86%;
        margin-left: auto;
        margin-right: auto;
        float: none;
        max-width: none;
    }
}
@media only screen and (max-width: 480px){
    .section.bg2 .bg2_item_cotainer .bg2_item li {
        margin-left: auto;
        margin-right: auto;
    }
}

.section.bg6 .bg6_cotainer .first_price {
  max-width: 100%;
  max-height: 100%;
  width: auto;
  padding: 0 5%;
}

/* adv */
#header .header_text_item.second p {
  position: relative;
}
#header .second p:nth-of-type(1)::after {
    background: url(../images/advantages1.png) no-repeat top left;
    background-size: cover;
    content: '';
    display: block;
    height: calc(100px * 273 / 314);
    top: 0;
    right: 0;
    position: absolute;
    transform: translate(15px, calc(-50% - 5px));
    width: 100px;
}

#header .header_text_img {
  display: none;
}

@media only screen and (max-width: 1200px) {
  #header .header_text_box .header_text {
    max-width: 100%;
  }
  #header .header_text_item.first,
  #header .header_text_item.second {
    display: none;
  }
  #header .header_text_img {
    display: block;
  }
  #header .header_text_img img {
    max-width: 100%;
  }
}
@media only screen and (max-width: 760px) {
  #header .header_text_box .header_text {
    width: 70%;
    margin: 0 auto;
    left: 50%;
    transform: translate(-50%, 0);
  }
}
@media only screen and (max-width: 480px) {
  #header {
    height: calc(100vw * 700 / 480);
  }
  #header .header_text_box .header_text {
    width: 100%;
  }
  #header .mobile_demo_box .header_demo {
    right: 0!important;
  }
}

